# realtime-voice-app

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
config/: settings.yaml
realtime_voice/: __init__.py  __main__.py  app.py  assistant.py  audio.py  config.py  controller.py  logging_utils.py  runtime.py  webserver.py
realtime_voice/web/: app.js  index.html  styles.css
tests/: test_audio_handler.py
